# joypad-os

src/: CMakeLists.txt  tusb_config.h
src/apps/usb2usb/: app.h  app_config.h
src/boards/: build_waveshare_rp2040_zero.sh  build_waveshare_rp2350_usb_a.sh
src/usb/usbh/xinput/: xinput.c
